# Navigate

./: .firebaserc  .gitignore  CLAUDE.md  TASKS.md  analyze.txt  analyze_err.txt  cleanup_firestore.js  firebase.json  package-lock.json
.firebase/: hosting.bmF2aWdhdGVfYXBwXHB1YmxpYw.cache
functions/: index.js  package-lock.json  package.json  seed_quiz.js
gps_plus/: .metadata  README.md  pubspec.yaml
gps_plus/android/: build.gradle  settings.gradle
gps_plus/example/: README.md  pubspec.yaml
gps_plus/ios/: gps_plus.podspec
gps_plus/lib/: gps_plus.dart  gps_plus_method_channel.dart  gps_plus_platform_interface.dart
gps_plus/test/: gps_plus_method_channel_test.dart  gps_plus_test.dart  path_loss_model_test.dart  position_engine_test.dart  trilateration_test.dart  weighted_centroid_test.dart
gps_plus/tool/: build_tower_db.dart
gps_plus/windows/: CMakeLists.txt  gps_plus_plugin.cpp  gps_plus_plugin.h  gps_plus_plugin_c_api.cpp
navigate_app/: .gitignore  APP.MD  APP_STORE_DESCRIPTION.md  CLAUDE.md  PLAN.md  PRIVACY_POLICY.md  README.md  algorithm.md  analysis_options.yaml  firebase.json  firestore.indexes.json  firestore.rules  gps_options.md  pubspec.yaml  shorebird.yaml  storage.rules  test_plan.md
navigate_app/.firebase/: hosting.cHVibGlj.cache
navigate_app/android/: settings.gradle
navigate_app/ios/: Podfile
navigate_app/lib/: main.dart  main_simple.dart
navigate_app/windows/terrain_engine/: CMakeLists.txt  terrain_engine.cpp  terrain_engine.h
presentation/: navigate_presentation.md  positioning_capabilities.html  positioning_capabilities.md
(+339 files in other folders)
